--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta property="og:image" content="boba-fetch-prev.png" />
+  <meta property="og:description" content="Boba Fetch! is a clone of Yelp, but for boba enthusiasts!" />
+  <meta property="og:url" content="https://boba-fetch-app.herokuapp.com/" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="shortcut icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
